--- a/MVC_KUTUPHANE/MVC_KUTUPHANE.csproj
+++ b/MVC_KUTUPHANE/MVC_KUTUPHANE.csproj
@@ -135,6 +135,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\islemController.cs" />
     <Compile Include="Controllers\KategoriController.cs" />
     <Compile Include="Controllers\KitapController.cs" />
     <Compile Include="Controllers\OduncController.cs" />
@@ -259,6 +260,9 @@
     <Content Include="Views\Uye\UyeEkle.cshtml" />
     <Content Include="Views\Uye\UyeGetir.cshtml" />
     <Content Include="Views\Odunc\OduncVer.cshtml" />
+    <Content Include="Views\Odunc\Index.cshtml" />
+    <Content Include="Views\Odunc\Odunciade.cshtml" />
+    <Content Include="Views\islem\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
