--- a/MVC_KUTUPHANE/MVC_KUTUPHANE.csproj
+++ b/MVC_KUTUPHANE/MVC_KUTUPHANE.csproj
@@ -312,6 +312,13 @@
     <Content Include="web2\resimler\book5.jpg" />
     <Content Include="web2\resimler\img1.jpg" />
     <Content Include="web2\w3layouts-License.txt" />
+    <Content Include="webhava\css\style.css" />
+    <Content Include="webhava\images\bg.jpg" />
+    <Content Include="webhava\images\img1.jpg" />
+    <Content Include="webhava\index.html" />
+    <Content Include="webhava\js\jquery-2.1.4.min.js" />
+    <Content Include="webhava\js\skycons.js" />
+    <Content Include="webhava\w3layouts-License.txt" />
     <EntityDeploy Include="Models\Entity\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
@@ -400,6 +407,9 @@
     <Content Include="Views\islem\Index.cshtml" />
     <Content Include="Views\vitrin\Index.cshtml" />
     <Content Include="Views\istatistik\Index.cshtml" />
+    <Content Include="Views\istatistik\Hava.cshtml" />
+    <Content Include="Views\istatistik\HavaKart.cshtml" />
+    <Content Include="Views\istatistik\Galeri.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
