--- a/MVC_KUTUPHANE/MVC_KUTUPHANE.csproj
+++ b/MVC_KUTUPHANE/MVC_KUTUPHANE.csproj
@@ -410,6 +410,7 @@
     <Content Include="Views\istatistik\Hava.cshtml" />
     <Content Include="Views\istatistik\HavaKart.cshtml" />
     <Content Include="Views\istatistik\Galeri.cshtml" />
+    <Content Include="Views\istatistik\LinqKart.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
